// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab component should render correctly with align center 1`] = `
Array [
  ".sharedRippleEffect-0-2-11 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-12 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-12:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-12:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-13 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-14 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-15 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-16 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-17 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d0-0-2-17:focus:after {
    border-radius: none;
  }
  .wrapper-d0-0-2-17:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d1-0-2-18 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-19 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-20 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-d4-0-2-23 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d4-0-2-23:focus:after {
    border-radius: none;
  }
  .wrapper-d4-0-2-23:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d5-0-2-24 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-25 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d7-0-2-26 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-d8-0-2-29 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d8-0-2-29:focus:after {
    border-radius: none;
  }
  .wrapper-d8-0-2-29:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d9-0-2-30 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d10-0-2-31 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d11-0-2-32 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-0-2-7 {
    height: 100%;
    padding: 0 16px;
    min-width: 72px;
    pointer-events: none;
  }
  .wrapper-0-2-7 > div {
    height: 100%;
  }
  .wrapper-0-2-7:hover {
    background: #11111129;
  }
  .tabButton-0-2-8 {
    gap: 8px;
    width: 100%;
    border: none;
    height: 100%;
    display: flex;
    background: none;
    align-items: center;
    text-transform: uppercase;
    justify-content: center;
  }
  .tabButton-0-2-8 i {  }
  .wrapper-d0-0-2-9 {  }
  .tabButton-d1-0-2-10 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d1-0-2-10 i {
    color: #737373;
  }
  .wrapper-d2-0-2-21 {  }
  .tabButton-d3-0-2-22 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d3-0-2-22 i {
    color: #737373;
  }
  .wrapper-d4-0-2-27 {  }
  .tabButton-d5-0-2-28 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d5-0-2-28 i {
    color: #737373;
  }
  .wrapper-0-2-1 {
    position: relative;
  }
  .container-0-2-2 {
    width: 100%;
    display: flex;
    padding: 0;
    overflow: hidden;
    list-style: none;
    overflow-x: hidden;
    align-items: center;
    scroll-behavior: smooth;
  }
  .container-0-2-2 button {  }
  .navigation-0-2-3 {
    top: 0;
    border: 0;
    bottom: 0;
    cursor: pointer;
    z-index: 1;
    position: absolute;
  }
  .navigation-0-2-3 > i {
    color: #737373;
  }
  .navigationPrev-0-2-4 {
    left: 0;
    background: linear-gradient(to right, #ffffff, transparent);
  }
  .navigationNext-0-2-5 {
    right: 0;
    background: linear-gradient(to left, #ffffff, transparent);
  }
  .container-d0-0-2-6 {
    height: 48px;
    justify-content: center;
    background-color: #ffffff;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14);
  }
  .container-d0-0-2-6 button {
    flex-direction: row;
  }",
  <div>
    <div
      class="wrapper-0-2-1 Tab-gaya"
    >
      <ul
        class="container-0-2-2 container-d0-0-2-6"
      >
        <li
          class="wrapper-0-2-7 wrapper-d0-0-2-9"
        >
          <div
            class="wrapper-0-2-12 wrapper-d0-0-2-17"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d2-0-2-19"
            >
              <div
                class="ripple-0-2-13 ripple-d1-0-2-18 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d1-0-2-10"
              type="button"
            >
              Tab 1
            </button>
          </div>
        </li>
        <li
          class="wrapper-0-2-7 wrapper-d2-0-2-21"
        >
          <div
            class="wrapper-0-2-12 wrapper-d4-0-2-23"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d6-0-2-25"
            >
              <div
                class="ripple-0-2-13 ripple-d5-0-2-24 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d3-0-2-22"
              type="button"
            >
              Tab 2
            </button>
          </div>
        </li>
        <li
          class="wrapper-0-2-7 wrapper-d4-0-2-27"
        >
          <div
            class="wrapper-0-2-12 wrapper-d8-0-2-29"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d10-0-2-31"
            >
              <div
                class="ripple-0-2-13 ripple-d9-0-2-30 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d5-0-2-28"
              type="button"
            >
              Tab 3
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`Tab component should render correctly with align right 1`] = `
Array [
  ".sharedRippleEffect-0-2-11 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-12 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-12:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-12:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-13 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-14 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-15 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-16 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-17 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d0-0-2-17:focus:after {
    border-radius: none;
  }
  .wrapper-d0-0-2-17:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d1-0-2-18 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-19 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-20 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-d4-0-2-23 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d4-0-2-23:focus:after {
    border-radius: none;
  }
  .wrapper-d4-0-2-23:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d5-0-2-24 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-25 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d7-0-2-26 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-d8-0-2-29 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d8-0-2-29:focus:after {
    border-radius: none;
  }
  .wrapper-d8-0-2-29:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d9-0-2-30 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d10-0-2-31 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d11-0-2-32 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-0-2-7 {
    height: 100%;
    padding: 0 16px;
    min-width: 72px;
    pointer-events: none;
  }
  .wrapper-0-2-7 > div {
    height: 100%;
  }
  .wrapper-0-2-7:hover {
    background: #11111129;
  }
  .tabButton-0-2-8 {
    gap: 8px;
    width: 100%;
    border: none;
    height: 100%;
    display: flex;
    background: none;
    align-items: center;
    text-transform: uppercase;
    justify-content: center;
  }
  .tabButton-0-2-8 i {  }
  .wrapper-d0-0-2-9 {  }
  .tabButton-d1-0-2-10 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d1-0-2-10 i {
    color: #737373;
  }
  .wrapper-d2-0-2-21 {  }
  .tabButton-d3-0-2-22 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d3-0-2-22 i {
    color: #737373;
  }
  .wrapper-d4-0-2-27 {  }
  .tabButton-d5-0-2-28 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d5-0-2-28 i {
    color: #737373;
  }
  .wrapper-0-2-1 {
    position: relative;
  }
  .container-0-2-2 {
    width: 100%;
    display: flex;
    padding: 0;
    overflow: hidden;
    list-style: none;
    overflow-x: hidden;
    align-items: center;
    scroll-behavior: smooth;
  }
  .container-0-2-2 button {  }
  .navigation-0-2-3 {
    top: 0;
    border: 0;
    bottom: 0;
    cursor: pointer;
    z-index: 1;
    position: absolute;
  }
  .navigation-0-2-3 > i {
    color: #737373;
  }
  .navigationPrev-0-2-4 {
    left: 0;
    background: linear-gradient(to right, #ffffff, transparent);
  }
  .navigationNext-0-2-5 {
    right: 0;
    background: linear-gradient(to left, #ffffff, transparent);
  }
  .container-d0-0-2-6 {
    height: 48px;
    justify-content: center;
    background-color: #ffffff;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14);
  }
  .container-d0-0-2-6 button {
    flex-direction: row;
  }",
  <div>
    <div
      class="wrapper-0-2-1 Tab-gaya"
    >
      <ul
        class="container-0-2-2 container-d0-0-2-6"
      >
        <li
          class="wrapper-0-2-7 wrapper-d0-0-2-9"
        >
          <div
            class="wrapper-0-2-12 wrapper-d0-0-2-17"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d2-0-2-19"
            >
              <div
                class="ripple-0-2-13 ripple-d1-0-2-18 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d1-0-2-10"
              type="button"
            >
              Tab 1
            </button>
          </div>
        </li>
        <li
          class="wrapper-0-2-7 wrapper-d2-0-2-21"
        >
          <div
            class="wrapper-0-2-12 wrapper-d4-0-2-23"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d6-0-2-25"
            >
              <div
                class="ripple-0-2-13 ripple-d5-0-2-24 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d3-0-2-22"
              type="button"
            >
              Tab 2
            </button>
          </div>
        </li>
        <li
          class="wrapper-0-2-7 wrapper-d4-0-2-27"
        >
          <div
            class="wrapper-0-2-12 wrapper-d8-0-2-29"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d10-0-2-31"
            >
              <div
                class="ripple-0-2-13 ripple-d9-0-2-30 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d5-0-2-28"
              type="button"
            >
              Tab 3
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`Tab component should render correctly with color is false 1`] = `
Array [
  ".sharedRippleEffect-0-2-11 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-12 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-12:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-12:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-13 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-14 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-15 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-16 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-17 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d0-0-2-17:focus:after {
    border-radius: none;
  }
  .wrapper-d0-0-2-17:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d1-0-2-18 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-19 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-20 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-d4-0-2-23 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d4-0-2-23:focus:after {
    border-radius: none;
  }
  .wrapper-d4-0-2-23:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d5-0-2-24 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-25 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d7-0-2-26 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-d8-0-2-29 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d8-0-2-29:focus:after {
    border-radius: none;
  }
  .wrapper-d8-0-2-29:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d9-0-2-30 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d10-0-2-31 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d11-0-2-32 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-0-2-7 {
    height: 100%;
    padding: 0 16px;
    min-width: 72px;
    pointer-events: none;
  }
  .wrapper-0-2-7 > div {
    height: 100%;
  }
  .wrapper-0-2-7:hover {
    background: #11111129;
  }
  .tabButton-0-2-8 {
    gap: 8px;
    width: 100%;
    border: none;
    height: 100%;
    display: flex;
    background: none;
    align-items: center;
    text-transform: uppercase;
    justify-content: center;
  }
  .tabButton-0-2-8 i {  }
  .wrapper-d0-0-2-9 {  }
  .tabButton-d1-0-2-10 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d1-0-2-10 i {
    color: #737373;
  }
  .wrapper-d2-0-2-21 {  }
  .tabButton-d3-0-2-22 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d3-0-2-22 i {
    color: #737373;
  }
  .wrapper-d4-0-2-27 {  }
  .tabButton-d5-0-2-28 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d5-0-2-28 i {
    color: #737373;
  }
  .wrapper-0-2-1 {
    position: relative;
  }
  .container-0-2-2 {
    width: 100%;
    display: flex;
    padding: 0;
    overflow: hidden;
    list-style: none;
    overflow-x: hidden;
    align-items: center;
    scroll-behavior: smooth;
  }
  .container-0-2-2 button {  }
  .navigation-0-2-3 {
    top: 0;
    border: 0;
    bottom: 0;
    cursor: pointer;
    z-index: 1;
    position: absolute;
  }
  .navigation-0-2-3 > i {
    color: #737373;
  }
  .navigationPrev-0-2-4 {
    left: 0;
    background: linear-gradient(to right, #ffffff, transparent);
  }
  .navigationNext-0-2-5 {
    right: 0;
    background: linear-gradient(to left, #ffffff, transparent);
  }
  .container-d0-0-2-6 {
    height: 48px;
    justify-content: flex-start;
    background-color: transparent;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14);
  }
  .container-d0-0-2-6 button {
    flex-direction: row;
  }",
  <div>
    <div
      class="wrapper-0-2-1 Tab-gaya"
    >
      <ul
        class="container-0-2-2 container-d0-0-2-6"
      >
        <li
          class="wrapper-0-2-7 wrapper-d0-0-2-9"
        >
          <div
            class="wrapper-0-2-12 wrapper-d0-0-2-17"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d2-0-2-19"
            >
              <div
                class="ripple-0-2-13 ripple-d1-0-2-18 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d1-0-2-10"
              type="button"
            >
              Tab 1
            </button>
          </div>
        </li>
        <li
          class="wrapper-0-2-7 wrapper-d2-0-2-21"
        >
          <div
            class="wrapper-0-2-12 wrapper-d4-0-2-23"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d6-0-2-25"
            >
              <div
                class="ripple-0-2-13 ripple-d5-0-2-24 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d3-0-2-22"
              type="button"
            >
              Tab 2
            </button>
          </div>
        </li>
        <li
          class="wrapper-0-2-7 wrapper-d4-0-2-27"
        >
          <div
            class="wrapper-0-2-12 wrapper-d8-0-2-29"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d10-0-2-31"
            >
              <div
                class="ripple-0-2-13 ripple-d9-0-2-30 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d5-0-2-28"
              type="button"
            >
              Tab 3
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`Tab component should render correctly with default props 1`] = `
Array [
  ".sharedRippleEffect-0-2-11 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-12 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-12:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-12:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-13 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-14 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-15 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-16 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-17 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d0-0-2-17:focus:after {
    border-radius: none;
  }
  .wrapper-d0-0-2-17:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d1-0-2-18 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-19 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-20 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-d4-0-2-23 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d4-0-2-23:focus:after {
    border-radius: none;
  }
  .wrapper-d4-0-2-23:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d5-0-2-24 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-25 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d7-0-2-26 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-d8-0-2-29 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d8-0-2-29:focus:after {
    border-radius: none;
  }
  .wrapper-d8-0-2-29:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d9-0-2-30 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d10-0-2-31 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d11-0-2-32 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-0-2-7 {
    height: 100%;
    padding: 0 16px;
    min-width: 72px;
    pointer-events: none;
  }
  .wrapper-0-2-7 > div {
    height: 100%;
  }
  .wrapper-0-2-7:hover {
    background: #11111129;
  }
  .tabButton-0-2-8 {
    gap: 8px;
    width: 100%;
    border: none;
    height: 100%;
    display: flex;
    background: none;
    align-items: center;
    text-transform: uppercase;
    justify-content: center;
  }
  .tabButton-0-2-8 i {  }
  .wrapper-d0-0-2-9 {  }
  .tabButton-d1-0-2-10 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d1-0-2-10 i {
    color: #737373;
  }
  .wrapper-d2-0-2-21 {  }
  .tabButton-d3-0-2-22 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d3-0-2-22 i {
    color: #737373;
  }
  .wrapper-d4-0-2-27 {  }
  .tabButton-d5-0-2-28 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d5-0-2-28 i {
    color: #737373;
  }
  .wrapper-0-2-1 {
    position: relative;
  }
  .container-0-2-2 {
    width: 100%;
    display: flex;
    padding: 0;
    overflow: hidden;
    list-style: none;
    overflow-x: hidden;
    align-items: center;
    scroll-behavior: smooth;
  }
  .container-0-2-2 button {  }
  .navigation-0-2-3 {
    top: 0;
    border: 0;
    bottom: 0;
    cursor: pointer;
    z-index: 1;
    position: absolute;
  }
  .navigation-0-2-3 > i {
    color: #737373;
  }
  .navigationPrev-0-2-4 {
    left: 0;
    background: linear-gradient(to right, #ffffff, transparent);
  }
  .navigationNext-0-2-5 {
    right: 0;
    background: linear-gradient(to left, #ffffff, transparent);
  }
  .container-d0-0-2-6 {
    height: 48px;
    justify-content: flex-start;
    background-color: #ffffff;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14);
  }
  .container-d0-0-2-6 button {
    flex-direction: row;
  }",
  <div>
    <div
      class="wrapper-0-2-1 Tab-gaya"
    >
      <ul
        class="container-0-2-2 container-d0-0-2-6"
      >
        <li
          class="wrapper-0-2-7 wrapper-d0-0-2-9"
        >
          <div
            class="wrapper-0-2-12 wrapper-d0-0-2-17"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d2-0-2-19"
            >
              <div
                class="ripple-0-2-13 ripple-d1-0-2-18 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d1-0-2-10"
              type="button"
            >
              Tab 1
            </button>
          </div>
        </li>
        <li
          class="wrapper-0-2-7 wrapper-d2-0-2-21"
        >
          <div
            class="wrapper-0-2-12 wrapper-d4-0-2-23"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d6-0-2-25"
            >
              <div
                class="ripple-0-2-13 ripple-d5-0-2-24 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d3-0-2-22"
              type="button"
            >
              Tab 2
            </button>
          </div>
        </li>
        <li
          class="wrapper-0-2-7 wrapper-d4-0-2-27"
        >
          <div
            class="wrapper-0-2-12 wrapper-d8-0-2-29"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d10-0-2-31"
            >
              <div
                class="ripple-0-2-13 ripple-d9-0-2-30 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d5-0-2-28"
              type="button"
            >
              Tab 3
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`Tab component should render correctly with elevation is false 1`] = `
Array [
  ".sharedRippleEffect-0-2-11 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-12 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-12:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-12:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-13 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-14 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-15 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-16 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-17 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d0-0-2-17:focus:after {
    border-radius: none;
  }
  .wrapper-d0-0-2-17:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d1-0-2-18 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-19 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-20 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-d4-0-2-23 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d4-0-2-23:focus:after {
    border-radius: none;
  }
  .wrapper-d4-0-2-23:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d5-0-2-24 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-25 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d7-0-2-26 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-d8-0-2-29 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d8-0-2-29:focus:after {
    border-radius: none;
  }
  .wrapper-d8-0-2-29:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d9-0-2-30 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d10-0-2-31 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d11-0-2-32 {
    animation: keyframes-ripple-0-2-16 300ms;
  }
  .wrapper-0-2-7 {
    height: 100%;
    padding: 0 16px;
    min-width: 72px;
    pointer-events: none;
  }
  .wrapper-0-2-7 > div {
    height: 100%;
  }
  .wrapper-0-2-7:hover {
    background: #11111129;
  }
  .tabButton-0-2-8 {
    gap: 8px;
    width: 100%;
    border: none;
    height: 100%;
    display: flex;
    background: none;
    align-items: center;
    text-transform: uppercase;
    justify-content: center;
  }
  .tabButton-0-2-8 i {  }
  .wrapper-d0-0-2-9 {  }
  .tabButton-d1-0-2-10 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d1-0-2-10 i {
    color: #737373;
  }
  .wrapper-d2-0-2-21 {  }
  .tabButton-d3-0-2-22 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d3-0-2-22 i {
    color: #737373;
  }
  .wrapper-d4-0-2-27 {  }
  .tabButton-d5-0-2-28 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d5-0-2-28 i {
    color: #737373;
  }
  .wrapper-0-2-1 {
    position: relative;
  }
  .container-0-2-2 {
    width: 100%;
    display: flex;
    padding: 0;
    overflow: hidden;
    list-style: none;
    overflow-x: hidden;
    align-items: center;
    scroll-behavior: smooth;
  }
  .container-0-2-2 button {  }
  .navigation-0-2-3 {
    top: 0;
    border: 0;
    bottom: 0;
    cursor: pointer;
    z-index: 1;
    position: absolute;
  }
  .navigation-0-2-3 > i {
    color: #737373;
  }
  .navigationPrev-0-2-4 {
    left: 0;
    background: linear-gradient(to right, #ffffff, transparent);
  }
  .navigationNext-0-2-5 {
    right: 0;
    background: linear-gradient(to left, #ffffff, transparent);
  }
  .container-d0-0-2-6 {
    height: 48px;
    justify-content: flex-start;
    background-color: #ffffff;
    box-shadow: none;
  }
  .container-d0-0-2-6 button {
    flex-direction: row;
  }",
  <div>
    <div
      class="wrapper-0-2-1 Tab-gaya"
    >
      <ul
        class="container-0-2-2 container-d0-0-2-6"
      >
        <li
          class="wrapper-0-2-7 wrapper-d0-0-2-9"
        >
          <div
            class="wrapper-0-2-12 wrapper-d0-0-2-17"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d2-0-2-19"
            >
              <div
                class="ripple-0-2-13 ripple-d1-0-2-18 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d1-0-2-10"
              type="button"
            >
              Tab 1
            </button>
          </div>
        </li>
        <li
          class="wrapper-0-2-7 wrapper-d2-0-2-21"
        >
          <div
            class="wrapper-0-2-12 wrapper-d4-0-2-23"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d6-0-2-25"
            >
              <div
                class="ripple-0-2-13 ripple-d5-0-2-24 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d3-0-2-22"
              type="button"
            >
              Tab 2
            </button>
          </div>
        </li>
        <li
          class="wrapper-0-2-7 wrapper-d4-0-2-27"
        >
          <div
            class="wrapper-0-2-12 wrapper-d8-0-2-29"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-14 rippleContainer-d10-0-2-31"
            >
              <div
                class="ripple-0-2-13 ripple-d9-0-2-30 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-8 tabButton-d5-0-2-28"
              type="button"
            >
              Tab 3
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`Tab component should render correctly with position is scrollable 1`] = `
Array [
  ".sharedRippleEffect-0-2-13 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-14 {
  height: fit-content;
  outline: none;
  position: relative;
}
.wrapper-0-2-14:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
}
.wrapper-0-2-14:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
}
.ripple-0-2-15 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-16 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-17 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-18 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-19 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d0-0-2-19:focus:after {
    border-radius: none;
  }
  .wrapper-d0-0-2-19:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d1-0-2-20 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-21 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d3-0-2-22 {
    animation: keyframes-ripple-0-2-18 300ms;
  }
  .wrapper-d4-0-2-25 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d4-0-2-25:focus:after {
    border-radius: none;
  }
  .wrapper-d4-0-2-25:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d5-0-2-26 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-27 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d7-0-2-28 {
    animation: keyframes-ripple-0-2-18 300ms;
  }
  .wrapper-d8-0-2-31 {
    flex-basis: 100%;
    cursor: pointer;
    display: block;
    align-self: stretch;
  }
  .wrapper-d8-0-2-31:focus:after {
    border-radius: none;
  }
  .wrapper-d8-0-2-31:hover:after {
    background-color: #111111;
    opacity: 0;
    border-radius: none;
  }
  .ripple-d9-0-2-32 {
    background-color: #111111;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d10-0-2-33 {
    overflow: hidden;
    border-radius: 4px;
  }
  .rippleActive-d11-0-2-34 {
    animation: keyframes-ripple-0-2-18 300ms;
  }
  .wrapper-0-2-9 {
    height: 100%;
    padding: 0 16px;
    min-width: 72px;
    pointer-events: none;
  }
  .wrapper-0-2-9 > div {
    height: 100%;
  }
  .wrapper-0-2-9:hover {
    background: #11111129;
  }
  .tabButton-0-2-10 {
    gap: 8px;
    width: 100%;
    border: none;
    height: 100%;
    display: flex;
    background: none;
    align-items: center;
    text-transform: uppercase;
    justify-content: center;
  }
  .tabButton-0-2-10 i {  }
  .wrapper-d0-0-2-11 {  }
  .tabButton-d1-0-2-12 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d1-0-2-12 i {
    color: #737373;
  }
  .wrapper-d2-0-2-23 {  }
  .tabButton-d3-0-2-24 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d3-0-2-24 i {
    color: #737373;
  }
  .wrapper-d4-0-2-29 {  }
  .tabButton-d5-0-2-30 {
    cursor: pointer;
    pointer-events: auto;
    color: #737373;
  }
  .tabButton-d5-0-2-30 i {
    color: #737373;
  }
  .icon-0-2-7 {
    font-family: natds-icons;
    user-select: none;
    pointer-events: none;
  }
  .icon-d0-0-2-8 {
    color: #111111;
    font-size: 24px;
  }
  .icon-d1-0-2-35 {
    color: #111111;
    font-size: 24px;
  }
  .wrapper-0-2-1 {
    position: relative;
  }
  .container-0-2-2 {
    width: 100%;
    display: flex;
    padding: 0;
    overflow: hidden;
    list-style: none;
    overflow-x: hidden;
    align-items: center;
    scroll-behavior: smooth;
  }
  .container-0-2-2 button {  }
  .navigation-0-2-3 {
    top: 0;
    border: 0;
    bottom: 0;
    cursor: pointer;
    z-index: 1;
    position: absolute;
  }
  .navigation-0-2-3 > i {
    color: #737373;
  }
  .navigationPrev-0-2-4 {
    left: 0;
    background: linear-gradient(to right, #ffffff, transparent);
  }
  .navigationNext-0-2-5 {
    right: 0;
    background: linear-gradient(to left, #ffffff, transparent);
  }
  .container-d0-0-2-6 {
    height: 48px;
    justify-content: flex-start;
    background-color: #ffffff;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14);
  }
  .container-d0-0-2-6 button {
    flex-direction: row;
  }",
  <div>
    <div
      class="wrapper-0-2-1 Tab-gaya"
    >
      <button
        class="navigation-0-2-3 navigationPrev-0-2-4"
        data-testid="btn-prev"
        type="button"
      >
        <i
          aria-hidden="true"
          class=" icon-0-2-7 icon-d0-0-2-8 natds-icons natds-icons-filled-navigation-arrowleft Icon-gaya"
          data-testid="icon-filled-navigation-arrowleft"
          role="img"
        />
      </button>
      <ul
        class="container-0-2-2 container-d0-0-2-6"
      >
        <li
          class="wrapper-0-2-9 wrapper-d0-0-2-11"
        >
          <div
            class="wrapper-0-2-14 wrapper-d0-0-2-19"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-16 rippleContainer-d2-0-2-21"
            >
              <div
                class="ripple-0-2-15 ripple-d1-0-2-20 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-10 tabButton-d1-0-2-12"
              type="button"
            >
              Tab 1
            </button>
          </div>
        </li>
        <li
          class="wrapper-0-2-9 wrapper-d2-0-2-23"
        >
          <div
            class="wrapper-0-2-14 wrapper-d4-0-2-25"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-16 rippleContainer-d6-0-2-27"
            >
              <div
                class="ripple-0-2-15 ripple-d5-0-2-26 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-10 tabButton-d3-0-2-24"
              type="button"
            >
              Tab 2
            </button>
          </div>
        </li>
        <li
          class="wrapper-0-2-9 wrapper-d4-0-2-29"
        >
          <div
            class="wrapper-0-2-14 wrapper-d8-0-2-31"
            data-testid="ripple-wrapper"
            tabindex="-1"
          >
            <div
              class="rippleContainer-0-2-16 rippleContainer-d10-0-2-33"
            >
              <div
                class="ripple-0-2-15 ripple-d9-0-2-32 "
                data-testid="ripple-animation"
              />
            </div>
            <button
              class="tabButton-0-2-10 tabButton-d5-0-2-30"
              type="button"
            >
              Tab 3
            </button>
          </div>
        </li>
      </ul>
      <button
        class="navigation-0-2-3 navigationNext-0-2-5"
        data-testid="btn-next"
        type="button"
      >
        <i
          aria-hidden="true"
          class=" icon-0-2-7 icon-d1-0-2-35 natds-icons natds-icons-filled-navigation-arrowright Icon-gaya"
          data-testid="icon-filled-navigation-arrowright"
          role="img"
        />
      </button>
    </div>
  </div>,
]
`;
